# janisbot4

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/actions/python/: Dockerfile  action.yml  entrypoint.sh  requirements.txt
.github/workflows/: cd_workflow.yml
conf/: default.conf  dev_extras_template.env  prod_template.env
janisbot4/: bot.py  config.py  configurations.py  filters.py  handlers.py  lorrem_api.py  main.py  plugin_loader.py  quote_api.py  singleton.py
janisbot4/api/: README.md  lorrem_api.py  quote_api.py
janisbot4/plugins/: README.md  blame_command.py  food_command.py  lorr_command.py  quote_command.py  quote_message.py  quotecunt_command.py  quotelast_command.py  randchoice_command.py  selfdestruct_command.py
src/: configurations.py  main.py  quote_api.py  singleton.py
tests/: dispatcher_stub.py  message_stub.py  test_filters.py  test_handlers.py  test_lorrem_api.py  test_plugin_loader.py  test_quote_api.py
tests/e2e/: conftest.py  session.py  test_commands.py
tests/plugins/: test_blame_command.py  test_food_command.py  test_lorr_command.py  test_quote_command.py  test_quote_message.py  test_quotecunt_command.py  test_quotelast_command.py  test_randchoice_command.py
tests/unit/: dispatcher_stub.py  test_bot.py  test_lorrem_api.py  test_plugin_loader.py  test_quote_api.py
tests/unit/plugins/: test_blame_command.py  test_food_command.py  test_lorr_command.py  test_quote_command.py  test_quote_message.py  (+3 more)
