[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = [
  ".git",
  ".venv",
  ".ruff_cache",
  ".devcontainer",
  "__pycache__",
  ".pytest_cache",
  ".github"
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:'imghdr'.*:DeprecationWarning:telethon.utils:7"
]
env_files = [
  "conf/dev_extras.env",
  "conf/test.env",
  "conf/prod.env",
  "conf/dev_extras_template.env",
  "conf/prod_template.env"
]

[tool.coverage.run]
source = ["janisbot4"]
branch = true
command_line = "-m pytest tests/unit"
data_file = ".coverage"

[tool.coverage.report]
fail_under = 100
skip_empty = true
skip_covered = true
sort = "-Cover"
show_missing = true
exclude_lines = [
    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "janisbot4"
version = "0.1.0"
description = ""
authors = ["Teemu Risikko <teemu.risikko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
requests = "^2.31.0"
responses = "^0.23.1"
beautifulsoup4 = "^4.11.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"
requests-mock = "^1.10.0"
pytest-asyncio = "^0.20.3"
pytest = "^7.2.2"
ruff = "^0.0.254"
black = "^23.1.0"
bandit = "^1.7.5"
telethon = "^1.27.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = [".venv"]

[tool.bandit.assert_used]
skips = ['*/test_*.py'] # Pytest uses asserts
